Adjustable pad size

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 
 <body>
+  <div id = "buttons">
+  <button id = "clear" onclick = "clear(); return false;"> CLEAR </button>
+  </div>
+
   <div id = "container">
   </div>
 
