Fix bug with redrawing fresh grid

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div id = "buttons">
-  <button id = "clear" onclick = "clear(); return false;"> CLEAR </button>
+  <button id = "clear"> CLEAR </button>
   </div>
 
   <div id = "container">
