New grid and Reset grid functionality

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
 <body>
   <div id = "buttons">
-  <button id = "clear"> CLEAR </button>
+  <button id = "newgrid" class = "button"> New grid </button>
+  <button id = "reset" class = "button"> Reset </button>
+  <button id = "greyscale" class = "button"> GREYSCALE </button>
+  <button id = "freestyle" class = "button"> FREESTYLE </button>
+  <button id = "rainbow" class = "button"> RAINBOW </button>
   </div>
 
   <div id = "container">
