Implement erase toggle functionality

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   <div id = "buttons">
   <button id = "newgrid" class = "button"> New grid </button>
   <button id = "reset" class = "button"> Reset </button>
-  <button id = "greyscale" class = "button"> GREYSCALE </button>
-  <button id = "freestyle" class = "button"> FREESTYLE </button>
-  <button id = "rainbow" class = "button"> RAINBOW </button>
+  <button id = "greyscale" class = "button"> Greyscale </button>
+  <button id = "freestyle" class = "button"> Freestyle </button>
+  <button id = "rainbow" class = "button"> Rainbow </button>
+  <button id = "erase" class = "button"> Erase </button>
   </div>
 
   <div id = "container">
