Add freestyle color-picker

--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
   <button id = "freestyle" class = "button"> Freestyle </button>
   <button id = "rainbow" class = "button"> Rainbow </button>
   <button id = "erase" class = "button"> Erase </button>
+
   </div>
+
+  <br>
+
+  <form>
+    Color<input type = "text" id = "color_input">
+    <input type = "submit" id = "color_submit">
+  </form>
 
   <div id = "container">
   </div>
