Somewhat functioning gradient

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
   <button id = "greyscale" class = "button"> Greyscale </button>
   <button id = "freestyle" class = "button"> Freestyle </button>
   <button id = "rainbow" class = "button"> Rainbow </button>
-  <button id = "erase" class = "button"> Erase </button>
+  <button id = "erase" class = "button"> Toggle Erase </button>
 
   </div>
 
   <br>
 
-  <form>
+  <form id = "color_picker">
     Color<input type = "text" id = "color_input">
     <input type = "submit" id = "color_submit">
   </form>
