--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 
 <body>
   <div id = "buttons">
-  <button id = "newgrid" class = "button"> New grid </button>
+  <button id = "newgrid" class = "button"> New</button>
   <button id = "reset" class = "button"> Reset </button>
-  <button id = "greyscale" class = "button"> Greyscale </button>
-  <button id = "freestyle" class = "button"> Freestyle </button>
+  <button id = "gradient" class = "button">Toggle Gradient </button>
+  <button id = "freestyle" class = "button"> Color Picker </button>
   <button id = "rainbow" class = "button"> Rainbow </button>
   <button id = "erase" class = "button"> Toggle Erase </button>
 
   </div>
 
-  <br>
-
+  <div id = "picker">
   <form id = "color_picker">
-    Color<input type = "text" id = "color_input">
+    <input type = "text" id = "color_input">
     <input type = "submit" id = "color_submit">
   </form>
+  </div>
 
   <div id = "container">
   </div>
